estilo e js na _layout

--- a/src/meetup-fullstack-core/Views/Shared/_Layout.cshtml
+++ b/src/meetup-fullstack-core/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
     <!-- endbuild -->
     <!-- build:css styles/app.css-->
     <!-- inject:css -->
+    <link rel="stylesheet" href="/css/style.css">
     <!-- endinject -->
     <!-- endbuild -->
 </head>
@@ -47,7 +48,7 @@
             </div>
         </section>
         <section class="container">
-            @RenderBody();
+            @RenderBody()
         </section>
         <footer class="page-footer red darken-2">
             <div class="footer-copyright">
@@ -60,6 +61,7 @@
 </body>
 <!-- build:js js/app.js-->
 <!-- inject:js -->
+<script src="/js/build.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 
