organização das classes

--- a/src/meetup-fullstack-core/Views/Home/Index.cshtml
+++ b/src/meetup-fullstack-core/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Feedback>
+﻿@model IEnumerable<meetup_fullstack_core.Model.Feedback>
 <div class="row">
     @foreach (var feedback in Model)
     {
