--- a/src/meetup-fullstack-core/Views/Home/Index.cshtml
+++ b/src/meetup-fullstack-core/Views/Home/Index.cshtml
@@ -15,3 +15,33 @@
     </div>
     }
 </div>
+
+<a class="modal-trigger waves-effect waves-light btn-large"  href="#modal1">Dar Feedback</a>
+
+<div id="modal1" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <h4>De um feedback para o amiguinho</h4>
+        <div class="row">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s12 m12">
+                        <select class="icons">
+                            <option value="" disabled selected>Selecione o usuário</option>
+                            <option value="" data-icon="images/sample-1.jpg" class="circle">example 1</option>
+                            <option value="" data-icon="images/office.jpg" class="circle">example 2</option>
+                            <option value="" data-icon="images/yuna.jpg" class="circle">example 1</option>
+                        </select>
+                        <label>Usuário</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <textarea id="feedback" class="materialize-textarea" length="120"></textarea>
+                        <label for="feedback">Feedback</label>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Dar feedback</a>
+    </div>
+</div>
