--- a/src/meetup-fullstack-core/Views/Home/Index.cshtml
+++ b/src/meetup-fullstack-core/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
 <div class="row" id="feedbacks">
     @foreach (var feedback in Model)
     {
-    <div class="col s6 m7 l3">
-        <div class="card">
+    <div class="col s12 m12 l3">
+        <div class="card animation--fadein">
             <div class="card-image">
                 <img src="@feedback.Imagem">
                 <span class="card-title">@feedback.Nome</span>
