--- a/src/meetup-fullstack-core/src/templates/feedback.hbs
+++ b/src/meetup-fullstack-core/src/templates/feedback.hbs
@@ -1,5 +1,5 @@
-<div class="col s6 m7 l3">
-	<div class="card">
+<div class="col s12 m7 l3">
+	<div class="card animation--fadein">
 		<div class="card-image">
 			<img src="{{imagem}}">
 			<span class="card-title">{{nome}}</span>
